--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 		<!-- alert card -->
 		<div class="row mt-3 mb-5">
 			<div class="col-4 pb-2 border-bottom border-dark border-5">
-				<div class="row">
+				<div class="row card-deck">
 					<div class="col-6">
 						<div class="card text-bg-danger pb-5" style="height: 100%;">
 							<div class="card-header">Alert</div>
