--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 			<div class="col-4 pb-2 border-bottom border-dark border-5">
 				<div class="row card-deck">
 					<div class="col-6">
-						<div class="card text-bg-danger pb-5" style="height: 100%;">
+						<div class="card text bg-danger pb-5" style="height: 100%;">
 							<div class="card-header">Alert</div>
 							<div class="card-body">
 							  <h5 class="card-title">Node Dead</h5>
